@@ -5,25 +5,21 @@ import static org.objectweb.asm.Opcodes.ATHROW;
 import static org.objectweb.asm.Opcodes.BIPUSH;
 import static org.objectweb.asm.Opcodes.CALOAD;
 import static org.objectweb.asm.Opcodes.DUP;
-import static org.objectweb.asm.Opcodes.GETSTATIC;
 import static org.objectweb.asm.Opcodes.GOTO;
 import static org.objectweb.asm.Opcodes.IF_ICMPEQ;
 import static org.objectweb.asm.Opcodes.IF_ICMPLT;
 import static org.objectweb.asm.Opcodes.IF_ICMPNE;
 import static org.objectweb.asm.Opcodes.ILOAD;
-import static org.objectweb.asm.Opcodes.INVOKEINTERFACE;
 import static org.objectweb.asm.Opcodes.INVOKESPECIAL;
-import static org.objectweb.asm.Opcodes.INVOKESTATIC;
-import static org.objectweb.asm.Opcodes.INVOKEVIRTUAL;
 import static org.objectweb.asm.Opcodes.ISTORE;
-import static org.objectweb.asm.Opcodes.ISUB;
 import static org.objectweb.asm.Opcodes.NEW;
 
 import org.objectweb.asm.Label;
 import org.objectweb.asm.MethodVisitor;
 
-import com.github.skjolber.stcsv.column.CsvColumnValueConsumer;
-import com.github.skjolber.stcsv.column.StringCsvColumnValueConsumer;
+import com.github.skjolber.stcsv.projection.BiConsumerProjection;
+import com.github.skjolber.stcsv.projection.TriConsumerProjection;
+import com.github.skjolber.stcsv.projection.ValueProjection;
 
 public abstract class AbstractColumn {
 
@@ -34,19 +30,17 @@ public abstract class AbstractColumn {
 	protected final boolean trimTrailingWhitespaces;
 	protected final boolean trimLeadingWhitespaces;
 
-	protected CsvMapper<?> parent;
+	protected AbstractCsvMapper<?> parent;
 
-	protected int currentArrayIndex;
-	protected int currentOffsetIndex;
-	protected int objectIndex;
-	protected int startIndex;
-	protected int rangeIndex;
+	protected final static int currentOffsetIndex = AbstractCsvMapper.VAR_CURRENT_OFFSET;
+	protected final static int currentArrayIndex = AbstractCsvMapper.VAR_CURRENT_ARRAY;
+	protected final static int objectIndex = AbstractCsvMapper.VAR_OBJECT;
+	protected final static int startIndex = AbstractCsvMapper.VAR_START;
+	protected final static int rangeIndex = AbstractCsvMapper.VAR_RANGE;
+	protected final static int intermediateIndex = AbstractCsvMapper.VAR_INTERMEDIATE_OBJECT;
 	
-	protected String consumerInternalName;
-	protected CsvColumnValueConsumer<?> consumer;
-
-	protected String setterName;
-	protected Class<?> setterClass;
+	protected Class<?> intermediate;
+	protected ValueProjection projection;
 
 	public AbstractColumn(String name, int index, boolean optional, boolean trimTrailingWhitespaces, boolean trimLeadingWhitespaces) {
 		this.name = name;
@@ -54,14 +48,6 @@ public abstract class AbstractColumn {
 		this.optional = optional;
 		this.trimTrailingWhitespaces = trimTrailingWhitespaces;
 		this.trimLeadingWhitespaces = trimLeadingWhitespaces;
-	}
-
-	public void setVariableIndexes(int currentArrayIndex, int currentOffsetIndex, int objectIndex, int startIndex, int rangeIndex) {
-		this.currentArrayIndex = currentArrayIndex;
-		this.currentOffsetIndex = currentOffsetIndex;
-		this.objectIndex = objectIndex;
-		this.startIndex = startIndex;
-		this.rangeIndex = rangeIndex;
 	}
 
 	public void middle(MethodVisitor mv, String subClassInternalName, boolean inline) {
@@ -82,16 +68,8 @@ public abstract class AbstractColumn {
 	public String getName() {
 		return name;
 	}
-	
-	public CsvColumnValueConsumer<?> getConsumer() {
-		return consumer;
-	}
-	
-	public void setConsumer(CsvColumnValueConsumer<?> consumer) {
-		this.consumer = consumer;
-	}
-	
-	public void setParent(CsvMapper<?> parent) {
+
+	public void setParent(AbstractCsvMapper<?> parent) {
 		this.parent = parent;
 	}
 
@@ -99,104 +77,14 @@ public abstract class AbstractColumn {
 		return index;
 	}
 	
-	public String getConsumerInternalName() {
-		if(consumerInternalName == null) {
-			if(consumer.getClass().getPackage().equals(StringCsvColumnValueConsumer.class.getPackage())) {
-				consumerInternalName = CsvMapper.getInternalName(consumer.getClass());
-			} else {
-				consumerInternalName = CsvMapper.consumerName;
-			}
-			
-		}
-		return consumerInternalName;
+	public boolean isBiConsumer() {
+		return projection instanceof BiConsumerProjection;
+	}
+
+	public boolean isTriConsumer() {
+		return projection instanceof TriConsumerProjection;
 	}
 	
-	public void setSetter(String setterName, Class<?> setterClass) {
-		this.setterName = setterName;
-		this.setterClass = setterClass;
-	}
-	
-	public boolean isConsumer() {
-		return consumer != null;
-	}
-
-	protected void doubleSetter(MethodVisitor mv, int endIndex) {
-		mv.visitVarInsn(ALOAD, objectIndex);
-		mv.visitVarInsn(ALOAD, currentArrayIndex);
-		mv.visitVarInsn(ILOAD, startIndex);
-		mv.visitVarInsn(ILOAD, endIndex);
-		mv.visitMethodInsn(INVOKESTATIC, "com/github/skjolber/stcsv/column/DoubleCsvColumnValueConsumer", "parseDouble", "([CII)D", false);
-		mv.visitMethodInsn(INVOKEVIRTUAL, parent.getMappedClassInternalName(), setterName, "(D)V", false);		
-	}
-
-	protected void booleanSetter(MethodVisitor mv, int endIndex) {
-		mv.visitVarInsn(ALOAD, objectIndex);
-		mv.visitVarInsn(ALOAD, currentArrayIndex);
-		mv.visitVarInsn(ILOAD, startIndex);
-		mv.visitVarInsn(ILOAD, endIndex);
-		mv.visitMethodInsn(INVOKESTATIC, "com/github/skjolber/stcsv/column/BooleanCsvColumnValueConsumer", "parseBoolean", "([CII)Z", false);
-		mv.visitMethodInsn(INVOKEVIRTUAL, parent.getMappedClassInternalName(), setterName, "(Z)V", false);		
-	}
-
-	protected void longSetter(MethodVisitor mv, int endIndex) {
-		mv.visitVarInsn(ALOAD, objectIndex);
-		mv.visitVarInsn(ALOAD, currentArrayIndex);
-		mv.visitVarInsn(ILOAD, startIndex);
-		mv.visitVarInsn(ILOAD, endIndex);
-		mv.visitMethodInsn(INVOKESTATIC, "com/github/skjolber/stcsv/column/LongCsvColumnValueConsumer", "parseLong", "([CII)J", false);
-		mv.visitMethodInsn(INVOKEVIRTUAL, parent.getMappedClassInternalName(), setterName, "(J)V", false);		
-	}	
-	
-	protected void intSetter(MethodVisitor mv, int endIndex) {
-		mv.visitVarInsn(ALOAD, objectIndex);
-		mv.visitVarInsn(ALOAD, currentArrayIndex);
-		mv.visitVarInsn(ILOAD, startIndex);
-		mv.visitVarInsn(ILOAD, endIndex);
-		mv.visitMethodInsn(INVOKESTATIC, "com/github/skjolber/stcsv/column/IntCsvColumnValueConsumer", "parseInt", "([CII)I", false);
-		mv.visitMethodInsn(INVOKEVIRTUAL, parent.getMappedClassInternalName(), setterName, "(I)V", false);		
-	}
-
-	protected void stringSetter(MethodVisitor mv, int endIndex) {
-		mv.visitVarInsn(ALOAD, objectIndex);
-		mv.visitTypeInsn(NEW, "java/lang/String");
-		mv.visitInsn(DUP);
-		mv.visitVarInsn(ALOAD, currentArrayIndex);
-		mv.visitVarInsn(ILOAD, startIndex);
-		mv.visitVarInsn(ILOAD, endIndex);
-		mv.visitVarInsn(ILOAD, startIndex);
-		mv.visitInsn(ISUB);
-		mv.visitMethodInsn(INVOKESPECIAL, "java/lang/String", "<init>", "([CII)V", false);
-		mv.visitMethodInsn(INVOKEVIRTUAL, parent.getMappedClassInternalName(), setterName, "(Ljava/lang/String;)V", false);
-	}
-	
-	protected void writeSetter(MethodVisitor mv, String subClassInternalName, int endIndex) {
-		if(setterClass == String.class) {
-			stringSetter(mv, endIndex);
-		} else if(setterClass == int.class) {
-			intSetter(mv, endIndex);
-		} else if(setterClass == long.class) {
-			longSetter(mv, endIndex);
-		} else if(setterClass == boolean.class) {
-			booleanSetter(mv, endIndex);
-		} else if(setterClass == double.class) {
-			doubleSetter(mv, endIndex);
-		} else {
-			throw new RuntimeException("No setter for " + getClass().getName());
-		}
-	}
-
-	protected void writeConsumer(MethodVisitor mv, String subClassInternalName, int endIndex) {
-		mv.visitFieldInsn(GETSTATIC, subClassInternalName, "v" + index, "L" + consumerInternalName + ";");
-		mv.visitVarInsn(ALOAD, objectIndex);
-		mv.visitVarInsn(ALOAD, currentArrayIndex);
-		mv.visitVarInsn(ILOAD, startIndex);
-		mv.visitVarInsn(ILOAD, endIndex);
-		if(consumerInternalName == CsvMapper.consumerName) {
-			mv.visitMethodInsn(INVOKEINTERFACE, CsvMapper.consumerName, "consume", "(Ljava/lang/Object;[CII)V", true);
-		} else {
-			mv.visitMethodInsn(INVOKEVIRTUAL, consumerInternalName, "consume", "(Ljava/lang/Object;[CII)V", false);
-		}
-	}
 	
 	protected Label ifNotAtChar(MethodVisitor mv, int character) {
 		// jump to label if the two integer refs are not equal
@@ -212,7 +100,7 @@ public abstract class AbstractColumn {
 		mv.visitVarInsn(ALOAD, currentArrayIndex);
 		mv.visitVarInsn(ILOAD, currentOffsetIndex);
 		mv.visitInsn(CALOAD);
-		mv.visitLdcInsn(new Integer(character));
+		mv.visitLdcInsn(Integer.valueOf(character));
 		Label l27 = new Label();
 		mv.visitJumpInsn(code, l27);
 		return l27;
@@ -233,7 +121,7 @@ public abstract class AbstractColumn {
 		mv.visitIincInsn(currentOffsetIndex, 1);
 		mv.visitVarInsn(ILOAD, currentOffsetIndex);
 		mv.visitInsn(CALOAD);
-		mv.visitLdcInsn(new Integer(divider));
+		mv.visitLdcInsn(Integer.valueOf(divider));
 		mv.visitJumpInsn(IF_ICMPNE, l29);
 	}
 	
@@ -306,11 +194,7 @@ public abstract class AbstractColumn {
 			mv.visitLabel(writeValueLabel);
 		}
 		
-		if(setterName != null) {
-			writeSetter(mv, subClassInternalName, endIndex);
-		} else {
-			writeConsumer(mv, subClassInternalName, endIndex);
-		}
+		projection.write(mv, subClassInternalName, endIndex);
 		
 		if(emptyValueLabel != null) {
 			mv.visitLabel(emptyValueLabel);
@@ -348,5 +232,12 @@ public abstract class AbstractColumn {
 		mv.visitIntInsn(BIPUSH, 9);
 		mv.visitJumpInsn(IF_ICMPEQ, add);
 	}
+
+	public ValueProjection getProjection() {
+		return projection;
+	}
 	
+	public void setProjection(ValueProjection projection) {
+		this.projection = projection;
+	}
 }
